2003-10-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Test for the presence of gcc 3.3, and the correct
	version of gcc 3.3, in order to decide between the 10.2 and
	10.2-gcc3.3 distributions.

2003-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm, Shlibs.pm:
	The shlibs code is giving trouble, so we move it to its own branch 
	again.  New branch is called "shlibs-20031018".

2003-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Add an automatic dependency on the current version 
	of darwin, whenever building a package.  (This is so that packages
	which have MACSOX_DEPLOYMENT_TARGET set by default in 10.3, don't
	get built in 10.3 but then installed in 10.2 by accident.)

2003-10-18  Peter O'Gorman <ogorman@users.sourceforge.net>
	
	* VirtPackage.pm: New virtual package for gcc2 (needed for 10.3)

2003-10-17  Michael G Schwern <schwern@users.sourceforge.net>

	* Package.pm, Services.pm: Optimizations to speed up
	some common operations.

2003-10-17  <dmalloc@users.sourceforge.net>

	* SelfUpdate.pm: Change default rsync host from 
	rsync://fink.opendarwin.org/finkinfo/ to
	rsync://master.us.finkmirrors.net/finkinfo/

2003-10-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm, Configure.pm: Change the default verbosity level from
	"3" (high) to "1" (low)
	* Shlibs.pm: change the DEBUG output from the Shlibs package, to 
	output which is only shown at verbosity level 3

2003-10-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Config.pm: make sure Trees line doesn't have absolute paths
	or ../'s in it.

2003-10-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* ChangeLog, Bootstrap.pm, Engine.pm, Package.pm, PkgVersion.pm, 
	SelfUpdate.pm, Shlibs.pm: merge in the "shlibs" branch from July
	
2003-10-10  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: make the gcc_select error a bit more user
	friendly.
