@@ -1,3 +1,9 @@
+2003-10-21  Justin F. Hallett  <thesin@users.sourceforge.net>
+
+	* PkgVersion.pm: Fixed a problem with perlmodules where when
+	PERL=<perlbinary> it would try and run ../<perlbinary> this is
+	fixed by using the full path to <perlbinary>.
+
 2003-10-20  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* Bootstrap.pm: Test for the presence of gcc 3.3, and the correct
